# Zappy

./: .gitignore  .gitmodules  LICENSE  README.md  out  zappy_ai
ai/: .gitignore  .pre-commit-config.yaml  README.md  ai_manager.py  zappy_ai
ai/Tests/x/: x_test.py
ai/app/: const.py  main.py
ai/app/modules/AIManager/: AIManager.py  AIManagerHelper.py
ai/app/modules/Cmds/: Cmds.py
ai/app/modules/Drone/: Drone.py  (+1 more)
ai/old_ai/: ai_manager.py  ai_run.py
ai/tests/x/: x_test.py
game/: .gitignore  CMakeLists.txt  SConstruct  readme.md
game/include/: Client.hpp  Common.hpp  Example.hpp  Genesis.hpp  Inventory.hpp  Player.hpp  Server.hpp  Team.hpp  Types.hpp  World.hpp
game/source/: Client.cpp  Example.cpp  Genesis.cpp  Inventory.cpp  Player.cpp  Server.cpp  Team.cpp  Types.cpp  World.cpp
game/zappy/: project.godot
game/zappy/assets/: Barbarian.glb.import  Barbarian_barbarian_texture.png.import  Knight.glb.import  Knight_knight_texture.png.import  Mage.glb.import  Mage_mage_texture.png.import  OpenSans-VariableFont_wdth,wght.ttf.import  Rogue.glb.import  Rogue_Hooded.glb.import  Rogue_Hooded_rogue_texture.png.import  Rogue_rogue_texture.png.import  barbarian_texture.png.import  color.gdshader  fictionalcharacterDEMO.otf.import  icon.svg.import  knight_texture.png.import  mage_texture.png.import  rogue_texture.png.import  tile.gltf.import  water.gdshader
game/zappy/assets/Robot/: 3DGodotRobot.glb.import  3DGodotRobot_GodotPalette.png.import
game/zappy/assets/Robot/MovementStates/: Drop.tres  Idle.tres  death.tres  invocation.tres  run.tres
game/zappy/assets/sprites/: deraumere.glb.import  linemate.glb.import  low_poly_food.glb.import  low_poly_food_0.png.import  low_poly_food_1.png.import  lowpoly_egg.glb.import  mendiane.glb.import  phiras.glb.import  sibur.glb.import  thystame.glb  thystame.glb.import
game/zappy/scenes/: 3d_godot_robot.tscn  character.tscn  end_of_game.tscn  main.tscn  menu.tscn  robot.tscn
game/zappy/scenes/sprites/: deraumere.tscn  egg.tscn  food.tscn  linemate.tscn  mendiane.tscn  phiras.tscn  sibur.tscn  thystame.tscn
game/zappy/scripts/: Robot.gd  animation_controller.gd  connect.gd  console.gd  dummy.gd  endOfGame.gd  errorLogs.gd  menu.gd  menu_camera.gd  movement_controller.gd  movement_state.gd  world.gd
server/: CMakeLists.txt  README.md
server/include/: client.h  game.h  gui.h  log.h  map.h  packet.h  parser.h  server.h  socket.h  zappy.h
server/include/game/: event.h  game.h  map.h  player.h  resources.h  team.h
server/include/libs/: lib.h  log.h
server/include/server/: action.h  client.h  command.h  gui.h  packet.h  pending.h  server.h  socket.h
server/libs/: CMakeLists.txt
server/libs/include/: lib.h
server/libs/src/: arrcat.c  arrcpy.c  arrlen.c  endswith.c  formatstr.c  freearr.c  join.c  load_llibrary.c  split.c  startswith.c  str_insert.c
server/src/: main.c  parser.c
server/src/action/: action.c  action_list.c
server/src/game/: game.c  game_utils.c  player.c  sound.c  team.c
server/src/game/event/: create_event.c  destroy_event.c  event.c  utils_event.c
server/src/game/event/ai/: broadcast.c  eject.c  fork.c  incantation.c  information.c  item.c  look.c  movement.c  player.c
server/src/game/map/: map.c  map_position.c  resources.c  tile.c  utils_resources.c  utils_tiles.c
server/src/game/player/: create_player.c  delete_player.c  game_create.c  game_delete.c  log_player.c  player.c  player_create.c  utils_player.c
server/src/game/team/: create_team.c  delete_team.c  team_create.c  team_delete.c  utils_team.c
server/src/parser/: parser.c  parser_utils1.c  parser_utils2.c  parser_utils_argp.c
server/src/server/: client.c  client_list.c  connection.c  destroy_packets.c  fds.c  gui.c  gui_list.c  handle_packets.c  packets.c  pending.c  pending_list.c  process_packets.c  select.c  server.c  server_loop.c  socket.c  socket_utils.c  write_packets.c
server/src/server/action/: action.c  action_list.c  process_actions.c
server/src/server/action/responses/: egg_death.c  egg_layed.c  egg_matured.c  event_completed.c  event_received.c  incantation_complete.c  incantation_end.c  incantation_start.c  map_refill.c  new_gui.c  new_player.c  player_broadcast.c  player_dead.c  player_eject.c  player_fork.c  player_inventory.c  player_moved.c  player_set.c  player_take.c
server/src/server/client/: client_list.c  client_utils.c
server/src/server/commands/: command_utils.c  error.c  msz.c
server/src/server/commands/ai/: broadcast.c  connect_nbr.c  eject.c  fork.c  forward.c  incantation.c  inventory.c  left.c  look.c  right.c  set_object.c  take_object.c
server/src/server/commands/gui/: bct.c  ebo.c  edi.c  eht.c  enw.c  incantation_end.c  incantation_start.c  mct.c  msz.c  pbc.c  pdi.c  pdr.c  pex.c  pfk.c  pgt.c  pic.c  pie.c  pin.c  player_die.c  player_move.c  plv.c  pnw.c  ppo.c  seg.c  sgt.c  smg.c  sst.c  tna.c
server/src/server/commands/pending/: pending.c
server/src/server/commands/utils/: broadcast.c  broadcast_utils.c  command_utils.c  message.c  object.c
server/src/server/packet/: destroy_packets.c  handle_packets.c  packet_utils.c  packets.c  process_packets.c
server/src/server/socket/: socket.c  socket_utils.c
(+6 files in other folders)
